@@ -13,7 +13,6 @@ import static org.lwjgl.opengl.GL11.GL_TEXTURE_2D;
 
 import java.nio.FloatBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import net.minecraft.block.Block;
@@ -88,7 +87,7 @@ public class GuidebookLevelRenderer {
             panelWidth,
             panelHeight,
             partialTicks,
-            Collections.emptyList(),
+            List.of(),
             LightDarkMode.LIGHT_MODE,
             null);
     }
@@ -150,7 +149,7 @@ public class GuidebookLevelRenderer {
             annotations,
             lightDarkMode,
             visibleLayerY,
-            Collections.emptyList());
+            List.of());
     }
 
     public void render(GuidebookLevel level, CameraSettings camera, int panelX, int panelY, int panelWidth,
@@ -173,7 +172,7 @@ public class GuidebookLevelRenderer {
             lightDarkMode,
             GuidebookSceneLayerSelection.fromVisibleLayer(visibleLayerY),
             particles,
-            Collections.emptyList(),
+            List.of(),
             0.0f);
     }
 
@@ -197,7 +196,7 @@ public class GuidebookLevelRenderer {
             lightDarkMode,
             layerSelection,
             particles,
-            Collections.emptyList(),
+            List.of(),
             0.0f);
     }
 
@@ -803,7 +802,7 @@ public class GuidebookLevelRenderer {
                 return null;
             }
         }
-        int lightSampleY = Math.max(precipitationBottom, Math.min(precipitationTop, (int) Math.floor(centerY)));
+        int lightSampleY = Math.clamp((int) Math.floor(centerY), precipitationBottom, precipitationTop);
         return acquireWeatherRenderColumn(pooledColumnIndex)
             .set(weatherType, x, z, renderBottom, renderTop, lightSampleY, alpha);
     }
@@ -937,8 +936,7 @@ public class GuidebookLevelRenderer {
         if (coverage >= 0.999f) {
             return true;
         }
-        int threshold = Math
-            .max(1, Math.min(WEATHER_COVERAGE_RESOLUTION, Math.round(coverage * WEATHER_COVERAGE_RESOLUTION)));
+        int threshold = Math.clamp(Math.round(coverage * WEATHER_COVERAGE_RESOLUTION), 1, WEATHER_COVERAGE_RESOLUTION);
         return Math.floorMod(resolveWeatherCoverageSeed(x, z), WEATHER_COVERAGE_RESOLUTION) < threshold;
     }
 
@@ -952,7 +950,7 @@ public class GuidebookLevelRenderer {
         float dz = column.centerZ() - centerZ;
         float radiusSquared = (dx * dx + dz * dz) / (WEATHER_RENDER_RADIUS * WEATHER_RENDER_RADIUS);
         float radialAlpha = (1.0f - radiusSquared) * alphaRadiusScale + 0.5f;
-        radialAlpha = Math.max(0.0f, Math.min(1.0f, radialAlpha));
+        radialAlpha = Math.clamp(radialAlpha, 0.0f, 1.0f);
         return column.baseAlpha() * radialAlpha;
     }
 
