@@ -1,6 +1,5 @@
 package com.hfstudio.guidenh.guide.scene.snapshot;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,16 +12,12 @@ public class GuidebookPreviewAuthorityStore {
 
     private final HashMap<Long, HashMap<String, byte[]>> byPos = new HashMap<>();
 
-    public void put(long packedPos, String supplementId, @Nullable byte[] payload) {
+    public void put(long packedPos, String supplementId, byte @Nullable [] payload) {
         if (payload == null || payload.length == 0) {
             remove(packedPos, supplementId);
             return;
         }
-        HashMap<String, byte[]> slot = byPos.get(packedPos);
-        if (slot == null) {
-            slot = new HashMap<>();
-            byPos.put(packedPos, slot);
-        }
+        HashMap<String, byte[]> slot = byPos.computeIfAbsent(packedPos, k -> new HashMap<>());
         slot.put(supplementId, payload.clone());
     }
 
@@ -67,8 +62,7 @@ public class GuidebookPreviewAuthorityStore {
         byPos.put(packedPos, restored);
     }
 
-    @Nullable
-    public byte[] get(long packedPos, String supplementId) {
+    public byte @Nullable [] get(long packedPos, String supplementId) {
         HashMap<String, byte[]> slot = byPos.get(packedPos);
         if (slot == null) {
             return null;
@@ -81,7 +75,7 @@ public class GuidebookPreviewAuthorityStore {
     public Map<String, byte[]> snapshotAt(long packedPos) {
         HashMap<String, byte[]> slot = byPos.get(packedPos);
         if (slot == null || slot.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         HashMap<String, byte[]> snapshot = new HashMap<>();
         for (Map.Entry<String, byte[]> entry : slot.entrySet()) {
@@ -90,18 +84,18 @@ public class GuidebookPreviewAuthorityStore {
                 snapshot.put(entry.getKey(), payload.clone());
             }
         }
-        return snapshot.isEmpty() ? Collections.emptyMap() : snapshot;
+        return snapshot.isEmpty() ? Map.of() : snapshot;
     }
 
     public Map<Long, Map<String, byte[]>> snapshotAll() {
         if (byPos.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         HashMap<Long, Map<String, byte[]>> snapshot = new HashMap<>();
         for (Long packedPos : byPos.keySet()) {
-            snapshot.put(packedPos, snapshotAt(packedPos.longValue()));
+            snapshot.put(packedPos, snapshotAt(packedPos));
         }
-        return snapshot.isEmpty() ? Collections.emptyMap() : snapshot;
+        return snapshot.isEmpty() ? Map.of() : snapshot;
     }
 
     public void restoreAll(Map<Long, Map<String, byte[]>> snapshot) {
@@ -111,10 +105,7 @@ public class GuidebookPreviewAuthorityStore {
         }
         for (Map.Entry<Long, Map<String, byte[]>> entry : snapshot.entrySet()) {
             if (entry.getKey() != null) {
-                restoreAt(
-                    entry.getKey()
-                        .longValue(),
-                    entry.getValue());
+                restoreAt(entry.getKey(), entry.getValue());
             }
         }
     }
