@@ -1,7 +1,5 @@
 package com.hfstudio.structurelibexport;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.jetbrains.annotations.Nullable;
@@ -9,6 +7,9 @@ import org.jetbrains.annotations.Nullable;
 import com.hfstudio.guidenh.guide.scene.level.GuidebookLevel;
 import com.hfstudio.guidenh.integration.structurelib.StructureLibSceneMetadata;
 
+import lombok.Getter;
+
+@Getter
 public class StructureLibSceneBuildResult {
 
     private final boolean success;
@@ -29,38 +30,17 @@ public class StructureLibSceneBuildResult {
 
     public static StructureLibSceneBuildResult success(GuidebookLevel level, List<String> warnings,
         @Nullable StructureLibSceneMetadata metadata) {
-        return new StructureLibSceneBuildResult(true, level, warnings, Collections.emptyList(), metadata);
+        return new StructureLibSceneBuildResult(true, level, warnings, List.of(), metadata);
     }
 
     public static StructureLibSceneBuildResult failure(List<String> warnings, List<String> errors) {
         return new StructureLibSceneBuildResult(false, new GuidebookLevel(), warnings, errors, null);
     }
 
-    public boolean isSuccess() {
-        return success;
-    }
-
-    public GuidebookLevel getLevel() {
-        return level;
-    }
-
-    public List<String> getWarnings() {
-        return warnings;
-    }
-
-    public List<String> getErrors() {
-        return errors;
-    }
-
-    @Nullable
-    public StructureLibSceneMetadata getMetadata() {
-        return metadata;
-    }
-
     private static List<String> immutableCopy(List<String> source) {
         if (source == null || source.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
-        return Collections.unmodifiableList(new ArrayList<>(source));
+        return List.copyOf(source);
     }
 }
